---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnexpectedEof]: unexpected eof encountered at `key`
  ┌─ eof:1:6
  │
1 │ key =
  │      ^


error: unexpected eof encountered at `key`
 --> eof:1:6
  |
1 | key =
  |      ^
Error {
    kind: "UnexpectedEof",
    message: "unexpected eof encountered",
    span: 5..5,
    path: Some(
        "key",
    ),
}
